# trust_Solana

./: .gitignore  Anchor.toml  Cargo.toml  Dockerfile.build  README.md
app/: index.html  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/: Navbar.tsx  ProfileCard.tsx  RiskBadge.tsx  StatusBadge.tsx  TransactionHistory.tsx  WalletProvider.tsx
app/src/hooks/: useProgram.ts  useTrustEstate.ts
app/src/i18n/: en.json  index.ts  kk.json  ru.json
app/src/lib/: api.ts  demoData.ts  idl.ts
app/src/pages/: Dashboard.tsx  Deals.tsx  Guide.tsx  Landing.tsx  Properties.tsx  PropertyDetail.tsx  Tokenize.tsx
app/src/store/: useStore.ts  useTxStore.ts
programs/trustestate/: Cargo.toml
programs/trustestate/src/: lib.rs
server/: .env.example  package.json
server/src/: index.ts
server/src/ai/: fraudDetector.ts
server/src/routes/: ai.ts  deal.ts  property.ts
server/src/solana/: executor.ts  onchainOracle.ts
