[package]
name = "trustestate"
version = "0.1.0"
description = "TrustEstate — Tokenized Real Estate with AI Fraud Detection on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trustestate"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
